Polish some formatting

--- a/08-mind-hacks.6
+++ b/08-mind-hacks.6
@@ -3,13 +3,15 @@
 
 .SH Psi
 
-.RS 2
+.ll 80en
+.RS -2
 \fB> Desdemona:\fR
 Glad to have you back.
 I hope you had a pleasant farcast from Pelion and don't feel too much lack.
 While you were out, a message from Aeneas with a precis on psi, extracted from the infomorph backup of psigeneticist Daborva (StellInt, Dipole Research Station on Ganymede), was rerouted for distribution to your Firewall node.
-.RE
 
+.ll
+.RE
 Coined by the biologist Bertold P. Wiesner, \[lq]psi\[rq] was originally an umbrella term used to describe a number of so\-called \[lq]psychic\[rq] abilities and other speculative paranormal phenomena such as telepathy and extra\-sensory perception.
 While the term was used extensively in the field of parapsychology and pop culture in the twentieth and early twenty\-first centuries, the study of psi was largely considered a pseudoscience with flawed methodologies and gradually lost funding and support.
 
@@ -68,7 +70,7 @@ r0 l l0.
 # | Active Members: 2  | #
 .TE
 
-.IP < 2
+.IP \fI<\fR 2
 Sorry to bother you, but my muse just alerted me to this excerpt that was sent around to my Firewall team.
 Is this for real?
 I've heard the talk about psi before\[em]enough to be convinced that there's something to it, even if we can't explain it\[em]but this bit about variant Exsurgent infection is too much.
@@ -77,16 +79,16 @@ And can you shed any more light on how asyncs do their mojo?
 I'm worried now.
 And since you are connected to the Medeans, I thought I'd take the chance and ask.
 
-.IP > 2
+.IP \fB>\fR 2
 Well, as to the Medeans ... that's history.
 I am back on the freelancing market right now.
 But no problem, I'll try and explain.
 I know it is not easy to grasp.
 
-.IP < 2
+.IP \fI<\fR 2
 Shiny.
 
-.IP > 2
+.IP \fB>\fR 2
 Yes, Srit was once infected with a strain of the Exsurgent virus, probably on Mars near the end of the Fall.
 I say \[lq]was\[rq] because the Watts\-MacLeod strain seems to go dormant shortly after it finishes rewiring the victim's brain; the plague nanobots die off and get flushed out of the system, unlike other Exsurgent strains, which continue to stick around and transform the subject.
 At least, that's the dominant theory\[em]I've also seen some speculation that async minds might be modified so that they continue to produce bio\-nanobots that linger in the brain, though what function these serve remains unclear.
@@ -95,41 +97,41 @@ I'll even go a bit further and say that prevailing opinion is that they can be t
 Not everyone agrees of course, but we have an abundance of paranoia in our circles.
 So far, we haven't seen any evidence that any of our asyncs have been turned by that initial infection, and the utility and usefulness of having psiactives on our side has simply been too important to push aside.
 
-.IP < 2
+.IP \fI<\fR 2
 All right.
 I can't say that I'll trust her, but I'll try and give her the benefit of the doubt.
 I'll be damned if I'm going to trust an async that's not vouched for by Firewall though\[em]who knows what the hell a hypercorp like Skinthetic might be cooking up in their black labs.
 
-.IP > 2
+.IP \fB>\fR 2
 That seems like a wise choice.
 
-.IP < 2
+.IP \fI<\fR 2
 Maybe you can put my mind at ease by explaining to me in a bit more detail how Watts\-MacLeod infection occurs.
 
-.IP > 2
+.IP \fB>\fR 2
 Well, like the other Exsurgent strains you are unfortunately familiar with, the primary transmission vector is a nanovirus, but we speculate that it may also be transmitted as a digital computer virus or possibly even as a basilisk hack.
 The physical plague form is spread by highly\-advanced techno\-organic nanobots that infect a biomorph and use bio\-mimicry mechanisms to pass as normal cells and penetrate the blood\-brain barrier and central nervous system.
 The nanobots are several steps beyond anything our technology can produce, are very difficult to detect, and can overwhelm most defensive countermeasures.
 Infected minds are essentially rewired, and these changes will be copied when the ego is uploaded.
 Synthmorphs and infomorphs remain immune to this nano\-infection, but they are theoretically vulnerable to other transmission vectors.
 
-.IP < 2
+.IP \fI<\fR 2
 I've heard that synthmorphs are effectively invulnerable to psi as well.
 This true?
 
-.IP > 2
+.IP \fB>\fR 2
 Yes.
 As far as we can tell, async abilities only effect biological minds\[em]either their own or others.
 And they can only read/affect others from a very short distance, requiring physical contact in most cases.
 The half\-biological minds of pods are also vulnerable, though to a lesser extent.
 Likewise, asyncs need a biological brain to use their abilities\[em]they can't use their psi if sleeved in a synthmorph and have difficulty in a pod.
 
-.IP < 2
+.IP \fI<\fR 2
 Interesting.
 So, I have to ask again\[em] you're sure she's safe?
 I've heard that some of these asyncs can be real nut\-jobs.
 
-.IP > 2
+.IP \fB>\fR 2
 I've heard from several of these asyncs directly.
 The fact is, infection rewrites their brain, and some of them came out the other side feeling fundamentally altered.
 Either they felt like a different person, or they felt like there was something new that was part of them\[em]something that they didn't necessarily like.
@@ -138,22 +140,22 @@ Yet another described it as giving a personality to their unconscious mind, whic
 Some of them preferred to suicide and revert to a pre\-infection backup.
 While they may be more prone to cracking up as a result, I haven't ever heard one talk about their abilities as something they couldn't control.
 
-.IP < 2
+.IP \fI<\fR 2
 Well, that's fucking cheery.
 There's nothing else we have on how this psi stuff actually works?
 
-.IP > 2
+.IP \fB>\fR 2
 Unfortunately, we don't.
 Even the Prometheans haven't been much help.
 There are theories, of course, but nothing that we've been able to verify with rigorous experimentation.
 It doesn't help that the factions that are aware of psi's existence don't exactly compare notes\[em]they're all too busy looking into ways to weaponize it and use it against each other, instead of figuring out how to use it for the benefit of transhumanity.
 
-.IP < 2
+.IP \fI<\fR 2
 Of course.
 The TITANs didn't get us, but we can still get ourselves.
 It worries me that the best we've come up with is nothing.
 
-.IP > 2
+.IP \fB>\fR 2
 It's important to keep perspective.
 Transhumanity has come quite a distance and made some impressive accomplishments, but our understanding of the universe is still in its infancy.
 What we may be facing here is something concocted by an intelligence so far beyond our own that we are but insignificant insects in comparison.
@@ -1540,7 +1542,7 @@ Futura was a joint initiative spearheaded by Hanto Genomics and strongly backed 
 The project was initially proposed by my mentor, Dr. Antonio Pascal, whose team had proven the feasibility of Accelerated Life Experience Training (ALET) after a series of pilot studies with two small (N < 1000) samples.
 While it is true that these early pilot studies used both older subjects and a lesser amount of time dilation, the rationale for the Futura Project's ambitious program was justified by a remarked decrease in transhumanity's population due to the Fall, a system\-wide stagnant population growth rate (blamed on various factors including increased longevity, available contraception, and rising despair over troubling times), as well as a desire to move aggressively into a new technological sector in the hopes of obtaining a competitive advantage.
 
-Futura began immediately in the wake of the Fall with an initial seed population of *** test subjects culled from extant genetic material and gestated to between 1 week and 6 months after birth.
+Futura began immediately in the wake of the Fall with an initial seed population of ▬▬▬▬ test subjects culled from extant genetic material and gestated to between 1 week and 6 months after birth.
 Of these, less than 10% were live births from either a surrogate or genetic birth mother who had perished during the Fall.
 The majority came from our Lunar and Martian labs and were brought to term within an exowomb.
 
