Make italics consistent with original copy

--- a/08-mind-hacks.6
+++ b/08-mind-hacks.6
@@ -219,7 +219,7 @@ No trauma is inflicted with this derangement.
 
 .RS 1
 Asyncs find it irritating and traumatizing to endure life as an infomorph, pod, or synthmorph for long periods of time.
-This phenomenon, known as morph fever, might cause temporary derangements and trauma to the asyncs' ego, possibly even to the grade of permanent disorders.
+This phenomenon, known as \fImorph fever\fR, might cause temporary derangements and trauma to the asyncs' ego, possibly even to the grade of permanent disorders.
 If stored or held captive as an active infomorph (i.e. not in virtual stasis), the async might go insane if not psychologically aided by some sort of anodyne program or supporting person during storage.
 In game terms, asyncs take \fI1d10 ÷ 2\fR (round up) points of mental stress damage per month they stay in a pod, synthmorph or infomorph form without psychological assistance by a psychiatrist, software, or muse.
 
@@ -1349,11 +1349,11 @@ Some people seek this adjustment willingly, such as socialite glitterati who res
 Behavioral control can also be applied as an unleashing or reinforcement.
 A companion may desire to eliminate their sexual inhibitions, for example, or a hypercorp exec may boost his commitment to place work above all else.
 
-A character will simply feel compelled to avoid a behavior that is limited (perhaps suffering a \-10 modifier), but will find it quite difficult to pursue a behavior that is blocked (requiring a \fIWIL × 3\fR Test, and suffering a \-20 modifier).
-They will find themselves completely incapable of initiating a behavior that is expunged, and if forced into the behavior will suffer a \-30 modifier and (\fI1d10 ÷ 2\fR, round up) points of mental Stress.
+A character will simply feel compelled to avoid a behavior that is \fIlimited\fR (perhaps suffering a \-10 modifier), but will find it quite difficult to pursue a behavior that is \fIblocked\fR (requiring a \fIWIL × 3\fR Test, and suffering a \-20 modifier).
+They will find themselves completely incapable of initiating a behavior that is \fIexpunged\fR, and if forced into the behavior will suffer a \-30 modifier and (\fI1d10 ÷ 2\fR, round up) points of mental Stress.
 
-Likewise, a character will feel compelled to pursue a behavior that is boosted, and will find it hard to avoid engaging in a behavior that is encouraged (requiring a \fIWIL × 3\fR Test to avoid).
-They will have no choice but to engage in enforced behaviors, and will suffer (\fI1d10 ÷ 2\fR, round up) points of mental Stress if prevented from doing so.
+Likewise, a character will feel compelled to pursue a behavior that is \fIboosted\fR, and will find it hard to avoid engaging in a behavior that is \fIencouraged\fR (requiring a \fIWIL × 3\fR Test to avoid).
+They will have no choice but to engage in \fIenforced\fR behaviors, and will suffer (\fI1d10 ÷ 2\fR, round up) points of mental Stress if prevented from doing so.
 
 .RE
 \fBBehavioral masking\fR
