--- a/11-gear.6
+++ b/11-gear.6
@@ -1462,24 +1462,45 @@ It may be fixed (one direction only), swiveling (limited field of fire), or on a
 .RE
 
 .RE
-.SS Sensors
+\fBSensors\fR
 
+.RS 1
+.HP 1
 \f[B]360\f[BI]\f[B]^∘^ Vision:\f[] The shell's visual sensors are situated for a 360\-degree field of vision.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Chemical Sniffer:\f[] This sensor detects molecules in the air and analyzes their chemical composition.
 It enables Chemistry Tests to determine the presence of gases, including toxins and other fumes.
 It can also detect the presence of explosives and firearms.
 \f[B][Moderate]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Lidar:\f[] This sensor emits laser light and measures the reflections to judge range, speed, and image the target.
 See Using Enhanced Senses, p. 302.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Nanoscopic Vision:\f[] The shell's visual sensors can focus like a microscope, using advanced superlens techniques to beat the optical diffraction limit and image objects as small as a nanometer.
 This allows the character to view and analyze objects as small as blood cells and even individual nanobots.
 The synthmorph must stay relatively steady to view objects at this scale.
 \f[B][Moderate]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Radar:\f[] This sensor system bounces radio or microwaves off targets and measures the reflected waves to judge size, composition, and motion.
 See Using Enhanced Senses, p. 302.
 \f[B][Low]\f[]
+.RE
+
+.RE
 .SH Armor
 
 Modern personal armor systems have advanced from the high modulus polyethylene thermoplastics and aramid fabrics of the early 21st century.
@@ -1492,47 +1513,84 @@ While such armor protects against bullets, the layers of material catch the bull
 Rules for armor in combat can be found on p. 194.
 Armored exoskeletons are listed on p. 343.
 
+.HP 1
 \f[B]Armor Clothing:\f[] The extra\-resilient organoweave fibers and fullerene materials that offer basic protection against kinetic and energy weapons can be woven in with normal smart materials to create a wide range of discreet armor clothing that provides a subtle level of
 security.
 Such protective garments are indistinguishable from regular clothing and come in all styles and designs.
 Armor clothing provides an Armor Value of 3/4.
 \f[B][Trivial]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Armor Vest:\f[] Armor vests provide more thorough protection to a body's vital areas, covering the abdomen and torso completely, protecting the neck with a rigid collar, and even providing wrap\-under protection for the groin.
 Though armor vests are not bulky, they are obvious as armor.
 Armor vests may be worn with armor clothing without penalty.
 Armor vests provide an Armor Value of 6/6.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Body Armor (Light):\f[] These high performance armor outfits protect the wearer from head to toe.
 An integrated armor vest is supplemented with increased protection on the limbs and joints, while still managing to be flexible and non\-restrictive.
 Body armor is typically worn by security and police forces, and supplemented with a helmet.
 It provides an Armor Value of 10/10.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Body Armor (Heavy):\f[] Similar to light body armor, but with extra protective layers, often ergonomically manufactured to conform to a specific character's body, and an environmental seal with climate control to protect the wearer from hostile environments.
 It provides an Armor Value of 13/13.
 \f[B][Moderate]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Crash Suit:\f[] Designed for both industrial worksite safety and protection from accidental zero\-G collisions, crash suits are also favored by sports enthusiasts and explorers.
 The basic jumpsuit offers comfortable protection equal to that of armor clothing.
 When activated with an electronic signal, however, elastic polymers within the suit stiffen and form rigid impact protection for vital areas.
 Crash suits provide an Armor Value of 3/4 when inactive and 4/6 when activated.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Helmet:\f[] This armor accessory is usually worn with body armor or a battle suit.
 Light helmets are open, whereas full helmets latch on and provide an environmental seal with a 12 hour supply of air.
 Light helmets provide an Armor Value bonus of +2/+2, whereas full helmets add +3/+3.
 Helmets are often equipped with an ecto (p. 325), a radio booster (p. 313), and sensors equal to specs (see p. 325).
 \f[B][Trivial]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Riot Shield:\f[] Used for mob suppression, riots shields are light\-weight, tough, and may be set to electrify on command, stunning anyone who comes into contact with the outer surface (treat as shock glove effects, p. 334).
 Riot shields provide an Armor Value bonus of +3/+2.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Second Skin:\f[] This lightweight bodysuit, woven from spider silks and fullerenes, is typically worn as an underlayer, though some athletes use it as a uniform.
 It provides minimal protection, but may be worn with other armor without penalty.
 It provides an Armor Value of 1/3.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Smart Skin:\f[] Smart skin is an advanced nanofluid that covers the wearer's skin.
 It resembles liquid mercury but retains the texture and flexibility of normal skin until activated, at which point the material becomes rigid enough to protect the wearer and distribute the kinetic energy (though still flexible enough at the joints not to impede movement).
 A specialized hive, worn by the character, replenishes the nanobots and stores them when not in use.
 Deploying the nanobots across the body takes a full Action Turn.
 Smart skin has an Armor Value of 3/2, and may be worn with other armor without penalty.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Spray Armor:\f[] This fast armor application comes in a spray can and disperses a smart chemical polymer that sticks to bare flesh (but does not adhere to hair and eyes).
 The polymer solidifies into a form fitting body armor fabric when exposed to body temperature with the look and feel of a latex suit.
 Spray armor does not work on synthetic morphs or on clothing or other armor.
@@ -1541,161 +1599,93 @@ The spray\-on armor does not wash off, but degrades 1 point of armor (both energ
 It may be removed with a special nanotech solvent.
 Spray armor has an Armor Value of 2/2.
 \f[B][Low]\f[]
+.RE
+
 .TS
-tab(|); l l l l.
-|
-\f[B]Armor\f[] |
-\f[B]Energy\f[] |
-\f[B]Kinetic\f[] |
-\f[B]Page\f[] |
-|
-Armor Clothing | 3
- | 4
- | 311 |
-|
-Armor Vest | 6
- | 6
- | 312 |
-|
-Battle Suit Powered Exoskeleton | 18
- | 18
- | 344 |
-|
-Bioweave Armor (Light) |
-2
- | 3
- | 302 |
-|
-Bioweave Armor (Heavy) |
-3
- | 4
- | 302 |
-|
-Body Armor (Light) |
-10
- | 10
- | 312 |
-|
-Body Armor (Heavy) |
-13
- | 13
- | 312 |
-|
-Carapace Armor | 11
- | 11
- | 303 |
-|
-Crash Suit (Inactive) |
-3
- | 4
- | 312 |
-|
-Crash Suit (Active) |
-4
- | 6
- | 312 |
-|
-Exowalker | 2
- | 4
- | 344 |
-|
-Hard Suit | 15
- | 15
- | 334 |
-|
-Helmet (Light) |
-+2
- | +2
- | 312 |
-|
-Helmet (Full) |
-+3
- | +3
- | 312 |
-|
-Hyperdense Exoskeleton | 6
- | 12
- | 344 |
-|
-Riot Shield | +3
- | +2
- | 312 |
-|
-Second Skin | 1
- | 3
- | 312 |
-|
-Smart Skin | 3
- | 2
- | 312 |
-|
-Smart Vac Clothing | 2
- | 4
- | 325 |
-|
-Spray Armor | 2
- | 2
- | 312 |
-|
-Synthmorph Industrial Armor | 10
- | 10
- | 310 |
-|
-Synthmorph Combat Armor (Light) |
-14
- | 12
- | 310 |
-|
-Synthmorph Combat Armor (Heavy) |
-16
- | 16
- | 310 |
-|
-Transporter Exoskeleton | 2
- | 4
- | 344 |
-|
-Trike Exoskeleton | 2
- | 4
- | 344 |
-|
-Vacsuit (Light) |
-5
- | 5
- | 333 |
-|
-Vacsuit (Standard) |
-7
- | 7
- | 333 |
+box nospaces tab(|);
+r0 l r r l0
+-  - - - -
+r0 l r r l0.
+| \f[B]Armor\f[]                    | \f[B]Energy\f[]   | \f[B]Kinetic\f[] |
+| Armor Clothing                    | 3                 | 4                |
+| Armor Vest                        | 6                 | 6                |
+| Battle Suit Powered Exoskeleton   | 18                | 18               |
+| Bioweave Armor (Light)            | 2                 | 3                |
+| Bioweave Armor (Heavy)            | 3                 | 4                |
+| Body Armor (Light)                | 10                | 10               |
+| Body Armor (Heavy)                | 13                | 13               |
+| Carapace Armor                    | 11                | 11               |
+| Crash Suit (Inactive)             | 3                 | 4                |
+| Crash Suit (Active)               | 4                 | 6                |
+| Exowalker                         | 2                 | 4                |
+| Hard Suit                         | 15                | 15               |
+| Helmet (Light)                    | +2                | +2               |
+| Helmet (Full)                     | +3                | +3               |
+| Hyperdense Exoskeleton            | 6                 | 12               |
+| Riot Shield                       | +3                | +2               |
+| Second Skin                       | 1                 | 3                |
+| Smart Skin                        | 3                 | 2                |
+| Smart Vac Clothing                | 2                 | 4                |
+| Spray Armor                       | 2                 | 2                |
+| Synthmorph Industrial Armor       | 10                | 10               |
+| Synthmorph Combat Armor (Light)   | 14                | 12               |
+| Synthmorph Combat Armor (Heavy)   | 16                | 16               |
+| Transporter Exoskeleton           | 2                 | 4                |
+| Trike Exoskeleton                 | 2                 | 4                |
+| Vacsuit (Light)                   | 5                 | 5                |
+| Vacsuit (Standard)                | 7                 | 7                |
 .TE
 
-[tab:armor\-values]
 .SS Armor mods
 
 Armor modifications add extra materials or coatings that either enhance the armor's resistance to certain dangers or provide other effects.
 Armor mods may be easily added or removed with the appropriate nanobot applicators.
 
+.HP 1
 \f[B]Ablative Patches:\f[] These thin and light slap\-on patches of stick to armor and are designed to absorb heat and energy from beams and explosions, safely vaporizing and blowing hot gas away.
 Ablative patches increases the Armor Value by +4/+2, but each hit reduces both the energy and kinetic value of the ablative armor by 1.
 \f[B][Trivial]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Chameleon Coating:\f[] This provides the armor with the same effect as the chameleon cloak (p. 315).
 \f[B][Trivial]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Fireproofing:\f[] Fireproofing includes the addition of heat\-resistant ceramic or fire\-resistant layers, both capable of withstanding extremely high temperatures.
 Fireproofing increases the Armor Value by +2/+0, and provides an additional 10 points of armor against heat or fire specifically.
 \f[B][Trivial]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Immunogenic System:\f[] The immunogenic mod adds an active nanobot swarm, maintained by a specialized hive, that coats the outer layer of armor and also the non\-armored parts of the wearer's morph.
 It acts as an outer immune system designed to neutralize toxic agents and nanotoxins with which it comes into contact.
 This provides immunity to drugs, toxins, and nanotoxins applied dermally, such as with a slap patch or splash grenade.
 It has no effect on inhaled, oral, or injected drugs (including coated weapons).
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Lotus Coating:\f[] The armor has been impregnated with a superhydrophic coating (contact angle of around 170\f[I]\f[]^∘^) that repels all water\-like liquids.
 If the armor is splashed by liquid toxins or chemicals, the effect is reduced since the liquids starts to roll off the armor.
 Apply a +30 modifier when defending against liquid\-based attacks.
 \f[B][Trivial]\f[]
-Offensive Armor: When activated, the outer layer of this armor is rigged to shock anyone or anything that contacts it with electricity.
+.RE
+
+.RS 1
+.HP 1
+\fBOffensive Armor:\fR When activated, the outer layer of this armor is rigged to shock anyone or anything that contacts it with electricity.
 Treat its DV and effect as a shock baton (p. 334).
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Reactive Coating:\f[] A thick layer of advanced nanotech is applied to the armor, protecting it with a colony of nanobots designed to sense incoming attacks.
 When an attack strikes the coating, it detonates to disrupt the attack.
 Bursts and full autofire are treated as a single attack.
@@ -1703,17 +1693,36 @@ A reactive coating increases the Armor Value by +5/+5, but each detonation autom
 Reactive armor also works against melee attacks, but the attacker also suffers 1d10 ÷ 2 (round up) points of damage per attack (armor protects) from the microexplosion.
 Reactive coating only works against 5 attacks, after which the specialized nanobot hive replenishes the coating at the rate of 1 use per hour.
 \f[B][Moderate]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Refractive Glazing:\f[] A combination of reflectors, refractive metamaterials, and an energy transfer system with heat radiators provides extra protection against energy weapons.
 Increase the Armor Value by +3/+0.
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Self\-Healing:\f[] The armor is equipped with a nanohive that acts like repair spray (p. 333).
 \f[B][Moderate]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Shock Proof:\f[] Shock proof armor is electronically insulated to discharge and reduce the effect of shock weapons.
 Apply an additional +10 modifier when resisting the DV and effects of shock weapons (p. 204).
 \f[B][Low]\f[]
+.RE
+
+.RS 1
+.HP 1
 \f[B]Thermal Dampening:\f[] Thermal dampening obfuscates heat signatures by converting body heat into electric energy.
 It makes the target more difficult to spot with thermal sensors; apply a −30 modifier for Perception Tests.
 \f[B][Moderate]\f[]
+.RE 
+
+.RE
 .SH Communications
 
 The oldest and most widespread communications technology still in regular use is radio.
