Make chapter 7 name consistent with original pdf

--- a/02-synopsis.6
+++ b/02-synopsis.6
@@ -229,7 +229,7 @@ See
 What is a dramatic story without action and violence?
 When words fail, weapons will blaze.
 See
-.BR 07-action-and-combat "(Eclipse Phase)"\fR.
+.BR 07-actions-and-combat "(Eclipse Phase)"\fR.
 
 .HP 1
 \fBMind Hacks:\fR
