--- a/08-mind-hacks.6
+++ b/08-mind-hacks.6
@@ -239,7 +239,7 @@ Asyncs acquires one Mental Disorder negative trait (
 ) for each level they have of the Psi trait without receiving any bonus CP.
 The gamemaster and player should agree on a disorder appropriate to the character.
 This disorder may be treated over time, according to normal rules (see Mental Healing and Psychotherapy,
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 .IP \[bu] 2
 Characters with the Psi trait are also vulnerable to infection by other strains of the Exsurgent virus.
@@ -388,7 +388,7 @@ Targets who fail their roll remain unaware.
 
 .RS 1
 Like full defense in physical combat (
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ), a defender may spend a Complex Action to rally and concentrate their mental defenses, gaining a \fI+30\fR modifier to their defense test against psi use until their next Action Phase.
 
 .RE
@@ -450,7 +450,7 @@ Every active sleight lists a Strain Value Modifier that modifies this amount.
 For example, a sleights with a Strain Value Modifier of \fI\-1\fR inflicts (\fI1d10 ÷ 2\fR) \-1 DV.
 
 If the damage points suffered from strain exceed the character's Wound Threshold, they may inflict a wound just like other damage (see Wounds,
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 
 .RE
@@ -915,7 +915,7 @@ r0 l l l0.
 Ego Sense can be used to detect the presence and location of other sentient and biological life forms (i.e., egos) within the async's range.
 To detect these life forms, the async makes a single Sense Test, opposed by each life form within range.
 The async may suffer a modifier for detecting small animals and insects, similar to the modifier applied for targeting them in ranged combat (see
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ); likewise, a modifier for detecting larger life forms may also be applied.
 If successful, the async has detected that the life form is nearby.
 Every 10 full points of MoS will ascertain another piece of information regarding the detected life: direction from async, approximate size, type of creature, distance from async, etc.
@@ -959,7 +959,7 @@ The intent is not to fake memories, but to place one of the async's memories in 
 This can be useful for \[lq]archiving\[rq] important data with an ally, providing a literal alternate perspective, or simply making a \[lq]data dump\[rq] for the target to peruse.
 Implant Memory requires an Opposed Test against unwilling participants.
 At the gamemaster's discretion, particularly traumatic memories might inflict mental stress on the recipient (
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 
 .RE
@@ -1473,7 +1473,7 @@ nospaces tab(|);
 .RS 1
 Therapeutic psychosurgery is beneficial for characters suffering from mental stress, traumas, and disorders.
 A successful Psychosurgery Test applies a +30 modifier to mental healing tests, as noted in
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 
 .RE
 \fBSkill imprints\fR
