--- a/11-gear.6
+++ b/11-gear.6
@@ -599,7 +599,7 @@ For potential drugs and chemicals, see below.
 .HP 1
 \f[B]Eelware:\f[] Derived from electric eel genetics, a character can have eelware implanted so that it connects to a network of bioconductors in the hands and feet (or other limbs), allowing the character to generate stunning shocks with a touch.
 Eelware inflicts shock damage (
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ) exactly like a pair of shock gloves.
 Eelware can also be used to power implants and specially designed handheld devices by touch.
 \f[B][Low]\f[]
@@ -1015,7 +1015,7 @@ This implant cannot be used simultaneously with any other augmentation that allo
 \f[B]Puppet Sock:\f[] This implanted computer allows the biomorph's body (the \[lq]puppet\[rq]) to be controlled by another character (the \[lq]puppeteer\[rq]).
 While active, the puppet has no control over their body and is simply along for the ride (at the gamemaster's discretion, puppets who are tormented by repeated or extensive loss of control may suffer mental stress).
 The puppeteer may directly \[lq]jam\[rq] the puppet or remote control it in the same way that robots and pods are teleoperated (
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 The puppeteer must either be ghost\-riding the puppet (see the Ghostrider Module) or have a direct communications link (via mesh, radio, laser, etc.).
 \f[B][Moderate]\f[]
@@ -3980,7 +3980,7 @@ These monowires cut through the target along with the bullet, inflicting additio
 \f[B]Homing:\f[] When fired with a smartlink system, the bullet identifies the target and uses nanosensors to lock on, correcting the bullet's trajectory with surface alterations and tiny vectored nozzles.
 Apply a +10 modifier to the Attack Test, cumulative with aiming and smartlink modifiers.
 Homing bullets may also be used for indirect fire (
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 \f[B][Low]\f[]
 .RE
@@ -3997,7 +3997,7 @@ Laser\-guided bullets may also be used for indirect fire.
 \f[B]Proximity:\f[] Proximity is an explosive ammunition that identifies the target when fired via smartlink.
 If the round determines that it will miss the target, it will still explode if it reaches the close proximity of the target.
 If the attack misses with an MoF of 10 or less, the round explodes 1d10 meters away from the target and inflicts 1d10 area effect damage (see Blast Effect,
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ) in the proximity of the target.
 \f[B][Moderate]\f[]
 .RE
@@ -4155,7 +4155,7 @@ Seekers are wielded using Seeker Weapon skill.
 
 Seeker missiles are detailed below.
 Like grenades, seekers may be programmed for a variety of trigger events (see Grenades and Seekers,
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 All seeker weapons are smartlink\-equipped.
 
@@ -4204,7 +4204,7 @@ Grenades and seeker missiles come in similar munitions packages and with similar
 Seeker missiles are fired from a seeker launcher using Seeker Weapons skill.
 Grenades are thrown at targets using Throwing Weapons skill.
 If a grenade or seeker misses, use the rules for scatter (
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 
 Grenades are available in standard form or as microgrenades.
@@ -4482,7 +4482,7 @@ In most cases, passengers simply state their destination and the vehicle takes t
 Manual piloting is primarily used in emergencies or by people who prefer the exotic thrill of controlling their own vehicle.
 
 Rules for handling robots and vehicles are detailed in
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 Any of these shells may be modified for use as a synthetic morph by adding a cyberbrain system.
 Each of the shells listed here comes with a puppet sock for remote\-control operation.
 
@@ -4691,7 +4691,7 @@ Numerous varieties exist, from robo\-pets to mechanical workers to warbots.
 If a job can be done more cheaply (and sometimes safely) by a bot, it usually is.
 The robots listed here are not generally used as synthetic shells by transhuman egos, often for cultural reasons (sleeving a case is bad enough, sleeving a creepy is just ...
 wrong), and they are not equipped to be sleeved into (though the may be jammed; see
-.BR 07-action-and-combat "(Eclipse Phase)"
+.BR 07-actions-and-combat "(Eclipse Phase)"
 ).
 Any of these bots may be modified for use as a synthetic morph, however, by adding a cyberbrain system.
 
